--- a/_0.template.md
+++ b/_0.template.md
@@ -96,7 +96,7 @@ Author(s): "[Author Name]"
 <!------------------------------------------------------------------------------
 🌎 External Links 🌎🌎🌎🌎🌎🌎🌎🌎🌎🌎🌎🌎🌎🌎🌎🌎🌎🌎🌎🌎🌎🌎🌎🌎
 ------------------------------------------------------------------------------->
-[Author]: www.google.com
+[Author]: docs/www.google.com
 
 <!------------------------------------------------------------------------------
 📖 Glossary Links 📖📖📖📖📖📖📖📖📖📖📖📖📖📖📖📖📖📖📖📖📖📖📖📖
