--- a/.0.md
+++ b/.0.md
@@ -9,3 +9,68 @@
    1. Optional: App list (.NET, Delphi, FoxPro, etc...)
    2. Optional: Connections to data
 4. Ask AI to analyze the exception
+
+
+⚠️ Data > Shape Data... > "Account Type" ⚠️;
+⬇️ ⬇️ ⬇️ Human-to-Machine (h2m) ⬇️ ⬇️ ⬇️;
+h2m - Entra ID User Account;
+h2m - Active Directory (AD);
+h2m - Database User (SQL Server Authentication);
+h2m - Local Machine Account;
+h2m - Web Application User;
+h2m - External Identity Provider Account;
+⬇️ ⬇️ ⬇️ Machine-to-Machine (m2m) ⬇️ ⬇️ ⬇️;
+m2m - IIS ApplicationPoolIdentity;
+m2m - Managed Service Account (sMSA);
+m2m - Managed Service Account (gMSA);
+m2m - Database Service Account (Windows Authentication);
+m2m - API Key;
+m2m - OAuth Client Credentials;
+m2m - Third-party API Key / Service Account;
+m2m - System Accounts (Network Service);
+m2m - System Accounts (Local Service);
+m2m - System Accounts (Local System);
+m2m - Certificate-Based Authentication
+
+
+
+
+
+
+⚠️ Data > Shape Data... > "Identity Provider" ⚠️;
+⬇️ ⬇️ ⬇️ Enterprise Identity Providers ⬇️ ⬇️ ⬇️;
+Microsoft Entra ID (formerly Azure Active Directory);
+Active Directory Federation Services (AD FS);
+Okta;
+Auth0;
+Ping Identity;
+Duende Identity Server (and the open-source IdentityServer4);
+⬇️ ⬇️ ⬇️ Social and Consumer Identity Providers ⬇️ ⬇️ ⬇️;
+Google Identity Platform;
+Facebook Login;
+Apple Sign In;
+Amazon Cognito;
+⬇️ ⬇️ ⬇️ Internal/Database Identity Providers ⬇️ ⬇️ ⬇️;
+Web Application Database;
+Internal Lightweight Directory Access Protocol (LDAP)
+
+⚠️ Data > Shape Data... > "Authentication Method" ⚠️;
+⬇️ ⬇️ ⬇️ Password/Credential-Based ⬇️ ⬇️ ⬇️;
+Username and Password;
+API Key/Token;
+⬇️ ⬇️ ⬇️ Multi-Factor Authentication (MFA) ⬇️ ⬇️ ⬇️;
+MFA with Time-Based One-Time Password (TOTP);
+MFA with SMS/Email One-Time Password (OTP);
+MFA with Push Notification;
+MFA with Hardware Token;
+⬇️ ⬇️ ⬇️ Token-Based Protocols (for delegated authentication) ⬇️ ⬇️ ⬇️;
+OAuth 2.0 (Authorization);
+OpenID Connect (OIDC);
+SAML (Security Assertion Markup Language);
+⬇️ ⬇️ ⬇️ Certificate-Based ⬇️ ⬇️ ⬇️;
+Certificate-Based Authentication (CBA);
+Mutual TLS (mTLS);
+⬇️ ⬇️ ⬇️ Integrated & Specialized ⬇️ ⬇️ ⬇️;
+Managed Service Identity (MSI);
+Integrated Windows Authentication (IWA);
+Biometrics
