--- a/.0.md
+++ b/.0.md
@@ -37,6 +37,9 @@ m2m - Certificate-Based Authentication
 
 
 
+
+
+
 ⚠️ Data > Shape Data... > "Identity Provider" ⚠️;
 ⬇️ ⬇️ ⬇️ Enterprise Identity Providers ⬇️ ⬇️ ⬇️;
 Microsoft Entra ID (formerly Azure Active Directory);
@@ -74,3 +77,17 @@ Mutual TLS (mTLS);
 Managed Service Identity (MSI);
 Integrated Windows Authentication (IWA);
 Biometrics
+
+
+=LET(
+    sh, "CBAS (Original)",
+    row, 487,
+    r,   MATCH(row, CBAS[Row #], 0),
+    firstCell, INDEX(CBAS[#Data], r, 1),
+    lastCell,  INDEX(CBAS[#Data], r, COLUMNS(CBAS[#Headers])),
+    addr, "#'" & sh & "'!" &
+           ADDRESS(ROW(firstCell), COLUMN(firstCell)) & ":" &
+           ADDRESS(ROW(lastCell),  COLUMN(lastCell)),
+    HYPERLINK(addr, "CBAS (Original)")
+)
+
